# Mux

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  package-lock.json  package.json
Homebrew/: mux.rb
docs/: DESIGN.md  DEVELOPMENT.md  PRD.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  icon_cache.rs  lib.rs  main.rs  path_resolver.rs  title_parser.rs
