[package]
name = "mux"
version = "0.1.1"
description = "Mux — mux between your projects"
authors = ["kay"]
edition = "2021"

[lib]
name = "mux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-foundation = "0.10"
core-foundation-sys = "0.8"
rusqlite = { version = "0.33", features = ["bundled"] }
libc = "0.2"
